Bug 72945 - L10n UI French Custom install does not list user interface languages ​​in alphabetical order
Summary: L10n UI French Custom install does not list user interface languages ​​in alp...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: Other Windows (All)
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:4.3.0 target:4.2.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-21 06:43 UTC by pierre-yves samyn
Modified: 2014-01-11 17:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot French Custom install (11.56 KB, image/png)
2013-12-21 06:43 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-12-21 06:43:47 UTC
Created attachment 91074 [details]
Screenshot French Custom install

Hello

French Custom install does not list user interface languages ​​in alphabetical order.

See screenshot

Regards
Pierre-Yves
Comment 1 Andras Timar 2013-12-27 09:26:27 UTC
Regression occurred, because the subtree of program modules were removed.
Comment 2 Commit Notification 2013-12-27 09:29:47 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6ecea097c5a57f39a4815537fdbde2c9c4140d54

fdo#72945 sort languages in Windows custom install tree view



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-12-27 09:32:13 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7f3bcb1e98cb3417594a5fd811babfc8067677f4&h=libreoffice-4-2

fdo#72945 sort languages in Windows custom install tree view


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 pierre-yves samyn 2014-01-11 17:46:49 UTC
Hello

Verified on windows 7/64 with Version: 4.2.0.2
Build ID: cd65d6220c5694ee7012d7863bcde3455c9e3c30

Thank you  :)

Regards
Pierre-Yves