fdo#72945 sort languages in Windows custom install tree view

Change-Id: I9a35ee7839373b82b47c0d5cc5b329918d337073